--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 
 env:
-  PACT_BROKER_BASE_URL: https://testdemo.pactflow.io
+  PACT_BROKER_BASE_URL: https://mconneely-sb.pactflow.io
   PACT_BROKER_TOKEN: ${{ secrets.PACTFLOW_TOKEN_FOR_CI_CD_WORKSHOP }}
   BASE_URL: http://localhost:5000
   GIT_COMMIT: ${{ github.sha }}
@@ -18,9 +18,10 @@ jobs:
       matrix:
         pact_provider:
           [
-            "pactflow-example-bi-directional-provider-dredd",
-            "pactflow-example-bi-directional-provider-restassured",
-            "pactflow-example-bi-directional-provider-postman",
+            # "pactflow-example-bi-directional-provider-dredd",
+            #"pactflow-example-bi-directional-provider-restassured",
+            # "pactflow-example-bi-directional-provider-postman",
+            "pactflow-example-bi-directional-provider-readyapi"
             # "pactflow-example-provider",
             # 'pactflow-example-bi-directional-provider-dotnet'
           ]
@@ -59,4 +60,4 @@ jobs:
       - run: docker pull pactfoundation/pact-cli:latest
       - name: Deploy
         run: GIT_BRANCH=${GIT_REF:11} make deploy
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/product-api-consumer'
