--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,9 +19,9 @@ jobs:
         pact_provider:
           [
             # "pactflow-example-bi-directional-provider-dredd",
-            #"pactflow-example-bi-directional-provider-restassured",
+            "pactflow-example-bi-directional-provider-restassured",
             # "pactflow-example-bi-directional-provider-postman",
-            "pactflow-example-bi-directional-provider-readyapi"
+            # "pactflow-example-bi-directional-provider-readyapi"
             # "pactflow-example-provider",
             # 'pactflow-example-bi-directional-provider-dotnet'
           ]
